--- a/package.json
+++ b/package.json
@@ -11,17 +11,28 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@nuxtjs/i18n": "^10.0.6",
+    "@primeuix/themes": "^1.2.3",
+    "@primevue/forms": "^4.3.7",
+    "chart.js": "^4.5.0",
     "flag-icons": "^7.5.0",
     "nuxt": "^3.17.7",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.7",
     "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.2",
+    "vue-i18n": "^11.1.11",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@nuxt/icon": "^2.0.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@primevue/nuxt-module": "^4.3.7",
+    "@vitejs/plugin-vue-jsx": "^5.1.1",
     "autoprefixer": "^10.4.21",
+    "nuxt-icon": "^1.0.0-beta.7",
+    "nuxt-primevue": "^3.0.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "vite-plugin-vuetify": "^2.1.2",
-    "vuetify": "^3.9.4"
+    "tailwindcss": "^3.4.17"
   }
 }
