--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fawmi/vue-google-maps": "^0.9.79",
     "@mdi/font": "^7.4.47",
     "@nuxtjs/i18n": "^10.0.6",
     "@primeuix/themes": "^1.2.3",
